[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "riot_reddit_poc"
version = "0.1.0"
description = "Reddit ingestion & ELT pipeline for Databricks"
authors = [{ name="Chirag Dudhrejia", email="dchirag159@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "praw==7.7.0",
    "boto3==1.28.0",
    "databricks-api==0.8.0",
    "databricks-sdk==0.19.0",
    "requests==2.31.0",
    "python-dotenv==1.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
